# onnx-tensorrt

./: .gitmodules  CMakeLists.txt  FancyActivation.cu  ImporterContext.hpp  ModelImporter.cpp  ModelImporter.hpp  OnnxAttrs.cpp  OnnxAttrs.hpp  PluginFactory.cpp  PluginFactory.hpp  README.md  RNNHelpers.cpp  RNNHelpers.hpp  ResizeNearest.cu  ShapedWeights.cpp  ShapedWeights.hpp  Split.cu  Status.hpp  builtin_op_importers.cpp  main.cpp  onnx2trt.hpp  onnx2trt_utils.cpp  onnx2trt_utils.hpp  onnx_backend_test.py  onnx_trt_backend.cpp  onnx_utils.hpp  operators.md  setup.py  trt_utils.hpp
onnx_tensorrt/: backend.py  config.py  tensorrt_engine.py
onnx_tensorrt/runtime/: __init__.py
